@@ -6,13 +6,12 @@
  */
 package com.powsybl.afs.ext.base;
 
-import com.google.common.collect.ImmutableList;
 import com.powsybl.commons.datasource.DataSource;
 import com.powsybl.commons.datasource.ReadOnlyDataSource;
-import com.powsybl.iidm.network.Importer;
-import com.powsybl.iidm.network.Network;
 import com.powsybl.commons.parameters.Parameter;
 import com.powsybl.commons.parameters.ParameterType;
+import com.powsybl.iidm.network.Importer;
+import com.powsybl.iidm.network.Network;
 import com.powsybl.iidm.network.NetworkFactory;
 
 import java.io.IOException;
@@ -47,8 +46,8 @@ public class TestImporter implements Importer {
 
     @Override
     public List<Parameter> getParameters() {
-        return ImmutableList.of(new Parameter("param1", ParameterType.BOOLEAN, "", Boolean.TRUE),
-                new Parameter("param2", ParameterType.STRING, "", "value"));
+        return List.of(new Parameter("param1", ParameterType.BOOLEAN, "", Boolean.TRUE),
+            new Parameter("param2", ParameterType.STRING, "", "value"));
     }
 
     @Override
@@ -67,5 +66,6 @@ public class TestImporter implements Importer {
 
     @Override
     public void copy(ReadOnlyDataSource fromDataSource, DataSource toDataSource) {
+        // Nothing to do here
     }
 }
